@@ -1,21 +1,24 @@
 package com.nl.sprinterbe.domain.user.application;
 
+import com.nl.sprinterbe.domain.backlogcomment.dao.BacklogCommentRepository;
+import com.nl.sprinterbe.domain.dailyscrum.dao.UserDailyScrumRepository;
 import com.nl.sprinterbe.domain.project.dto.ProjectResponse;
 import com.nl.sprinterbe.domain.project.entity.Project;
+import com.nl.sprinterbe.domain.task.dao.TaskRepository;
+import com.nl.sprinterbe.domain.task.entity.Task;
 import com.nl.sprinterbe.domain.user.dto.UserInfoResponse;
 import com.nl.sprinterbe.domain.user.dto.UserUpdateRequest;
+import com.nl.sprinterbe.domain.userbacklog.dao.UserBacklogRepository;
 import com.nl.sprinterbe.domain.userproject.entity.UserProject;
-import com.nl.sprinterbe.global.common.code.ResponseStatus;
 import com.nl.sprinterbe.domain.refreshtoken.application.RefreshTokenService;
-import com.nl.sprinterbe.global.common.ResponseDto;
 import com.nl.sprinterbe.domain.user.dao.SignUpRequestDto;
 import com.nl.sprinterbe.domain.refreshtoken.entity.RefreshToken;
-import com.nl.sprinterbe.global.exception.LoginFormException;
+import com.nl.sprinterbe.global.exception.user.LoginFormException;
 import com.nl.sprinterbe.domain.refreshtoken.dao.RefreshTokenRepository;
 import com.nl.sprinterbe.domain.user.entity.User;
 import com.nl.sprinterbe.domain.userproject.dao.UserProjectRepository;
 import com.nl.sprinterbe.domain.user.dao.UserRepository;
-import com.nl.sprinterbe.global.exception.user.DuplicateUserNicknameException;
+import com.nl.sprinterbe.global.exception.user.UserAlreadyExistsException;
 import com.nl.sprinterbe.global.exception.user.UserNotFoundException;
 import com.nl.sprinterbe.global.exception.user.UserPasswordNotEqualsException;
 import com.nl.sprinterbe.global.security.JwtUtil;
@@ -42,55 +45,59 @@ public class UserService {
     private final RefreshTokenService refreshTokenService;
     private final UserProjectRepository userProjectRepository;
     private final JwtUtil jwtUtil;
+    // 댓글
+    private final BacklogCommentRepository backlogCommentRepository;
+    // 유저 백로그
+    private final UserDailyScrumRepository userDailyScrumRepository;
+    // Task
+    private final TaskRepository taskRepository;
+    // UserBacklog
+    private final UserBacklogRepository userBacklogRepository;
+
 
     public void updateUser(Long userId, UserUpdateRequest userUpdateRequest) {
-        User findUser = userRepository.findById(userId)
+        User user = userRepository.findById(userId)
                 .orElseThrow(UserNotFoundException::new);
-
-        // 비밀번호 검사
-        // 비밀번호 비교할땐 .matches 써야함
-        if (!passwordEncoder.matches(userUpdateRequest.getCurrentPassword(), findUser.getPassword())) {
+        //시큐리티context에 있는 유저정보를 업데이트
+        String password = user.getPassword();
+        String userPassword = userUpdateRequest.getCurrentPassword();
+        if (!passwordEncoder.matches(userPassword, password)) {
             throw new UserPasswordNotEqualsException();
         }
-
-        // 닉네임 중복검사
-        boolean exists = userRepository.existsByNickname(findUser.getNickname());
-        if (!userUpdateRequest.getNickname().equals(findUser.getNickname()) && exists) {
-            throw new DuplicateUserNicknameException();
-        }
-
-        findUser.setNickname(userUpdateRequest.getNickname());
-        findUser.setPassword(passwordEncoder.encode(userUpdateRequest.getNewPassword()));
+        user.setNickname(userUpdateRequest.getNickname());
+        user.setPassword(passwordEncoder.encode(userUpdateRequest.getNewPassword()));
     }
 
-    //jwt로 회원가입
-    public void join(SignUpRequestDto dto){
-        String email = dto.getEmail();
-        if(userRepository.findByEmailAndProvider(email,"LOCAL").isPresent()) {
-            throw new RuntimeException("User with email " + email + " already exists");
+    // JWT 로 회원가입
+    public void join(SignUpRequestDto signUpRequestDto) {
+        String email = signUpRequestDto.getEmail();
+        if (userRepository.findByEmailAndProvider(email, "LOCAL").isPresent()) {
+            throw new UserAlreadyExistsException();
         }
-        User user = new User();
-        user.setProvider("LOCAL");
-        user.setEmail(dto.getEmail());
-        user.setNickname(dto.getNickname());
-        user.setPassword(passwordEncoder.encode(dto.getPassword()));
+        User user = User.builder()
+                .provider("LOCAL")
+                .email(signUpRequestDto.getEmail())
+                .nickname(signUpRequestDto.getNickname())
+                .password(passwordEncoder.encode(signUpRequestDto.getPassword()))
+                .role("ROLE_USER")
+                .build();
         userRepository.save(user);
     }
 
     //jwt로그아웃
-    public ResponseEntity<ResponseDto<?>> logout(String refreshToken) throws LoginFormException {
+    public ResponseEntity<Void> logout(String refreshToken) throws LoginFormException {
         Optional<RefreshToken> refreshTokenOpt = refreshTokenRepository.findByRefresh(refreshToken);
 
-        if (refreshTokenOpt.isPresent() && refreshToken!=null && !refreshTokenOpt.get().getExpired()) {
+        if (refreshTokenOpt.isPresent() && refreshToken != null && !refreshTokenOpt.get().getExpired()) {
             refreshTokenService.updateExpiredTokens(jwtUtil.getId(refreshToken));
-            return ResponseDto.settingResponse(HttpStatus.OK, ResponseStatus.LOGOUT_SUCCESS);
+            return ResponseEntity.ok().build();
         } else {
-            throw new LoginFormException("Invalid Refresh Token");
+            throw new LoginFormException();
         }
     }
 
-    public ResponseEntity<ResponseDto<?>> refresh(String refreshToken, HttpServletResponse response){
-        if(refreshToken==null){
+    public ResponseEntity<Void> refresh(String refreshToken, HttpServletResponse response) {
+        if (refreshToken == null) {
             throw new JwtException("Refresh Null");
         }
         jwtUtil.isExpired(refreshToken);
@@ -102,15 +109,15 @@ public class UserService {
                 .orElseThrow(() -> new UserNotFoundException());
 
         String newRefreshToken = jwtUtil.createRefreshJwt(id); // 새 Refresh Token 생성
-        String newAccessToken = jwtUtil.createJwt(id,userOpt.getEmail());
+        String newAccessToken = jwtUtil.createJwt(id, userOpt.getEmail());
 
         refreshTokenOpt.setExpired(true); // 기존 refreshToken Expire 필드 값 true로 변경
-        refreshTokenService.save(newRefreshToken,id); // 새로운 refreshToken DB에 저장
+        refreshTokenService.save(newRefreshToken, id); // 새로운 refreshToken DB에 저장
 
-        response.setHeader("Authorization","Bearer "+ newAccessToken);
-        response.addCookie(jwtUtil.createCookie("Refresh",newRefreshToken));
+        response.setHeader("Authorization", "Bearer " + newAccessToken);
+        response.addCookie(jwtUtil.createCookie("Refresh", newRefreshToken));
 
-        return ResponseDto.settingResponse(HttpStatus.CREATED, ResponseStatus.TOKEN_CREATED);
+        return ResponseEntity.status(HttpStatus.CREATED).body(null);
     }
 
     /**
@@ -120,7 +127,7 @@ public class UserService {
         List<Project> projects = userProjectRepository.findByUserUserId(userId)
                 .stream()
                 .map(UserProject::getProject)
-                .collect(Collectors.toList());
+                .toList();
 
         return projects.stream()
                 .map(project -> new ProjectResponse(project.getProjectId(), project.getProjectName(), project.getCreatedAt()))
@@ -135,14 +142,7 @@ public class UserService {
         return UserInfoResponse.of(user);
     }
 
-    /**
-     * 유저 삭제
-     * 유령 유저 로직 등 도입 필요 TODO
-     */
     public void deleteUser(Long userId) {
-        // 다른 리포지토리에서 유저를 유령유저로 치환
-        // 댓글..
-        // 채팅..
         userRepository.deleteById(userId);
     }
 }
